Revision history for beacon2-cbi-tools

2.0.11  2025-0X-XX

    - Updated paths in 'scripts/02_test_deployment.sh 

2.0.10  2025-05-14

    - Added 'tsv' mode to support SNP microarray data as input

2.0.9  2025-05-10
    - Added docs
    - Made STDOUT friendlier with UTF-8 emoji (turn off via --no-emoji)
    - Restored defaults to: mem=8GB, tmpdir=/tmp, dbnsfpset=all
    - VCF2BFF
      - Fixed error in assignment of 'clinicalRelevance' that was using 'CLINVAR_CLNSIGINCL' (i.e., haplotype-based) when present, instead of 'CLINVAR_CLNSIG'
        - Affected variant rate in CINECA_synthetic_cohort_EUROPE_UK1 (chr22 WGS VCF): 
          - Total variants: < 0.0003% (3 / 1,109,368)
          - ACMG-annotated variants: < 0.03% (3 / 10,580)
      - Added additional properties '_CLINVAR_CLNSIGINCL' and '_CLINVAR_ALLELEID' (if present) to the 'clinicalInterpretations' object
    - BFF2HTML
      - Added pattern 'MODERATE' for fetching these annotated variants in 'bff2html'.
      - Display only one 'clinicalRelevance' per variant instead of one per 'clinicalInterpretation'
      - Fixed issue with assigning URLs to the comma-separated ‘ClinVar’ column

2.0.8  2025-03-22

    - The CRG FTP site has reached end-of-life after three years of availability
      - External files moved to a new location; download script updated accordingly
      - External datasets are now downloaded outside the container, simplifying data persistence
    - Repository renamed to 'beacon2-cbi-tools' ([C]NAG [B]iomedical [I]nformatics)
    - Repository transferred to @CNAG-Biomedical-Informatics organization
    - Added support for arm64 (Apple Silicon / M-based Macs) architectures
    - 'mongosh' is now installed via apt
    - Updated Dockerfile
    - BEACON => BFF-TOOLS:
      - 'lib/BEACON/ => 'lib/BFF', 'Beacon.pm' => 'Tools.pm'
      - 'mongodb' mode renamed to 'load'
      - Added 'validate' mode runs 'utils/bff_validator/bff-validator'